--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>CV | Ilya Prikazchikov </title>
+    <link rel="stylesheet" href="styles/style.css">
+  </head>
+  <body>
+   
+  </body>
 </html>
