feat: add header with styles

--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
     <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-   
+    <header>
+        <div class="header-container">
+            <div class='profile-image'>
+                <img
+                  class="profile-picture"
+                  src="images/Ilya.png"
+                  alt="Ilya's profile picture"
+                />
+            </div>
+                  <div class='name-and-bio'>
+                <h1 class="name">Ilya Prikazchikov</h1>
+                <p class="bio">
+                  <em> The <strong>Rising Star</strong> of Web Development</em>
+                </p>
+              </div>
+                  <div class='contact-info'>
+                <h3>Contact info:</h2>
+                <p>email: ilyaprikaz@gmail.com</p>
+                <p>telegram: @ilyaprikazchikov</p>
+                  </div>
+        </div>
+      </header>
   </body>
 </html>
