--- a/index.html
+++ b/index.html
@@ -28,5 +28,13 @@
                   </div>
         </div>
       </header>
+      <section class="about-me">
+          <h2 class="about-me-title">About Me</h2>
+          <div class="about-me-content">
+            <p>I'm the <strong class='pro'>pro</strong>grammer you're looking for!</p>
+            <p>My goal is to become a <em>Gold Star of Web-Development</em> and I'm really focused on it!</p>
+            <p>So if one day you come across a web-site or an app that works and looks perfectly you can be sure it was made by <strong>me!</strong></p>
+          </div>
+      </section>
   </body>
 </html>
