--- a/index.html
+++ b/index.html
@@ -43,5 +43,28 @@
               <p>HTML, CSS, JavaScript, TypeScript, Node.js, Express.js, Git, SQL</p>
           </div>
       </section>
+      <hr>
+      <section class="my-code">
+          <h2 class='my-code-title'>Example of My Code:</h2>
+          <div class='my-code-content'>
+              <pre><code>
+            public async getImgByProductID(idProduct: number): Promise &lt;string[]&gt; {
+                let asImage: string[] = null;
+                try {
+                    const avImage = await this.db(${ItemE.NAME})
+                        .leftJoin(`${S3ItemImgE.NAME}`, `${ItemE.NAME}.item_id`, `${S3ItemImgE.NAME}.item_id`)
+                        .leftJoin(`${S3ItemFileE.NAME}`, `${S3ItemImgE.NAME}.s3_item_file_id`, `${S3ItemFileE.NAME}.id`)
+                        .where(`${ItemE.NAME}.product_id`, idProduct)
+                        .whereNotNull(`${S3ItemFileE.NAME}.source_url`)
+                        .distinct({ url: `${S3ItemFileE.NAME}.source_url` });
+                    // Array of Objects => Array of Strings
+                    asImage = avImage.map((el) => String(el.url));
+                } catch (e) {
+                    this.errorSys.errorEx(e, 'ProductSQL.getImgByProductID', 'Could not get any images by requested data');
+                }
+                return asImage;
+            }</code></pre>
+          </div>
+      </section>
   </body>
 </html>
