feat: add my work experience section

--- a/index.html
+++ b/index.html
@@ -66,5 +66,39 @@
             }</code></pre>
           </div>
       </section>
+      <hr>
+      <section class="work-experience">
+          <h2 class='work-experience-title'>Work-Experience:</h2>
+          <div class='work-experience-content'>
+              <table cellspacing='30'>
+                  <tr>
+                      <th class='work-experience-th'>
+                        POSITION:
+                      </th>
+                      <th class='work-experience-th'>
+                        PLACE OF WORK:
+                      </th>
+                      <th class='work-experience-th'>
+                        PERIOD:
+                      </th>
+                  </tr>
+                  <tr>
+                      <td>Back-End Web Developer</td>
+                      <td>LLC "Nika", Russia</td>
+                      <td>May 2021 - Now</td>
+                  </tr>
+                  <tr>
+                    <td>Court Clerk</td>
+                    <td>District Court of The Industrial District of Samara, Russia</td>
+                    <td>August 2020 - January 2021</td>
+                </tr>
+                <tr>
+                    <td>Food & Beverage Associate</td>
+                    <td>Kings Island, USA</td>
+                    <td>May 2019 - September 2019</td>
+                </tr>
+              </table>
+          </div>
+      </section>
   </body>
 </html>
