--- a/index.html
+++ b/index.html
@@ -68,17 +68,17 @@
       </section>
       <hr>
       <section class="work-experience">
-          <h2 class='work-experience-title'>Work-Experience:</h2>
+          <h2 class='work-experience-title'>Work Experience:</h2>
           <div class='work-experience-content'>
               <table cellspacing='30'>
                   <tr>
-                      <th class='work-experience-th'>
+                      <th>
                         POSITION:
                       </th>
-                      <th class='work-experience-th'>
+                      <th>
                         PLACE OF WORK:
                       </th>
-                      <th class='work-experience-th'>
+                      <th>
                         PERIOD:
                       </th>
                   </tr>
@@ -100,5 +100,44 @@
               </table>
           </div>
       </section>
+      <hr>
+      <section class="education">
+        <h2 class='education-title'>Education:</h2>
+        <div class='education-content'>
+            <table cellspacing='30'>
+                <tr>
+                    <th>
+                        SPECIALIZATION:
+                    </th>
+                    <th>
+                        PLACE OF STUDY:
+                    </th>
+                    <th>
+                        PERIOD:
+                    </th>
+                </tr>
+                <tr>
+                    <td>Front-End Web Development</td>
+                    <td>Rolling Scopes School</td>
+                    <td>July 2021 - Now</td>
+                </tr>
+                <tr>
+                  <td>Full-Stack Web Development</td>
+                  <td>JavaScript + Node.js + Vue.js in Real Projects, Udemy</td>
+                  <td>March 2021 - June 2021</td>
+              </tr>
+              <tr>
+                  <td>Full-Stack Web Development</td>
+                  <td>The Complete 2021 Web-Development Bootcamp, Udemy</td>
+                  <td>January 2021 - April 2021</td>
+              </tr>
+              <tr>
+                <td>Faculty of Law</td>
+                <td>Samara University</td>
+                <td>September 2016 - July 2020</td>
+            </tr>
+            </table>
+        </div>
+    </section>
   </body>
 </html>
