feat: add english level section

--- a/index.html
+++ b/index.html
@@ -139,5 +139,14 @@
             </table>
         </div>
     </section>
+    <hr>
+    <section class="english-level">
+        <h2 class="english-level-title">English Level:</h2>
+        <div class="english-level-content">
+          <p>I think that my English level is <strong>B2</strong>. </p>
+          <p>I took part in "Work & Travel USA", so I lived and worked in the USA from May to September 2019.</p>
+          <p>I got to know many international students and US citizens! I had a lot of speaking practice and I hadn't got any problems with understanding out there.</p>
+        </div>
+    </section>
   </body>
 </html>
