--- a/index.html
+++ b/index.html
@@ -148,5 +148,18 @@
           <p>I got to know many international students and US citizens! I had a lot of speaking practice and I hadn't got any problems with understanding out there.</p>
         </div>
     </section>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-left">
+            <img class="rs-school-logo"src="/images/rs_school_js.svg" alt="rs school logo">
+        
+        <a href="https://rs.school/js/"><p>RS School Course</p></a>
+        </div>
+    <div class="footer-right">
+        <a href="https://github.com/Exy63"><img class="github-logo" src="/images/github-logo.png" alt="me on github"></a>
+        <p>2021</p>
+    </div>
+    </div>
+    </footer>
   </body>
 </html>
