--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </p>
       </div>
       <div class="contact-info header-box">
-        <h3>Contact info:</h2>
+        <h3>Contact info:</h3>
           <p>email: ilyaprikaz@gmail.com</p>
           <p>telegram: @ilyaprikazchikov</p>
       </div>
@@ -69,7 +69,7 @@
   <section class="work-experience-section">
     <h2 class="work-experience-title">Work Experience:</h2>
     <div class="work-experience-content">
-      <table cellspacing="30">
+      <table>
         <tr>
           <th>
             POSITION:
@@ -103,7 +103,7 @@
   <section class="education-section">
     <h2 class="education-title">Education:</h2>
     <div class="education-content">
-      <table cellspacing="30">
+      <table>
         <tr>
           <th>
             SPECIALIZATION:
