--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   <footer>
     <div class="footer-container">
       <div class="footer-part footer-left">
-        <img class="rs-school-logo" src="/images/rs_school_js.svg" alt="rs-school-logo" width="170" height="70">
+        <img class="rs-school-logo" src="images/rs_school_js.svg" alt="rs-school-logo" width="170" height="70">
 
         <a href="https://rs.school/js/">
           <p>RS School Course</p>
@@ -159,7 +159,7 @@
       </div>
       <div class="footer-part footer-right">
         <a href="https://github.com/Exy63">
-          <img class="github-logo" src="/images/github-logo.png" alt="me on github" width="190" height="70">
+          <img class="github-logo" src="images/github-logo.png" alt="me on github" width="190" height="70">
         </a>
         <p>2021</p>
       </div>
