feat: add more skills

--- a/index.html
+++ b/index.html
@@ -58,16 +58,33 @@
             <h2 class="my-skills-title">My Skills:</h2>
             
             <div class="my-skills-content">
-              <ul></ul>
-              <li>HTML</li>
-              <li>CSS</li>
+              <div class='skills-1'>
+              <ul>
               <li>JavaScript</li>
               <li>TypeScript</li>
+              <li>React.js</li>
               <li>Node.js</li>
               <li>Express.js</li>
-              <li>Git</li>
-              <li>SQL</li>
             </ul>
+          </div>
+          <div class='skills-2'>
+            <ul>
+            <li>SQL</li>
+            <li>MySQL</li>
+            <li>NoSQL</li>
+            <li>MongoDB</li>
+            <li>Knex.js</li>
+          </ul>
+        </div>
+        <div class="skills-3">
+          <ul>
+          <li>OOP</li>
+          <li>RESTful APIs</li>
+          <li>Git</li>
+          <li>HTML</li>
+          <li>CSS</li>
+        </ul>
+      </div>
             </div>
           
         </section>
