refactor: change work experience

--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@
                 <th>PERIOD:</th>
               </tr>
               <tr>
-                <td>Back-End Web Developer</td>
-                <td>LLC "Nika", Russia</td>
-                <td>May 2021 - Now</td>
+                <td>Back-End Developer</td>
+                <td>NeoSoft LLC, Russia</td>
+                <td>May 2021 - Current</td>
               </tr>
               <tr>
                 <td>Court Clerk</td>
                 <td>
-                  District Court of The Industrial District of Samara, Russia
+                  Industrial District Court of Samara, Russia
                 </td>
                 <td>August 2020 - January 2021</td>
               </tr>
