feat: add code hihglighter

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <title>CV | Ilya Prikazchikov</title>
     <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.9/styles/default.min.css">
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.9/highlight.min.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
   </head>
 
   <body>
@@ -92,7 +95,7 @@
         <section class="my-code-section">
           <h2 class="my-code-title">Example of My Code:</h2>
           <div class="my-code-content">
-            <pre><code>
+            <pre><code class='typescript'>
             public async getImgByProductID(idProduct: number): Promise&lt;string[]&gt; {
                 let asImage: string[] = null;
                 try {
@@ -168,7 +171,7 @@
                 <td>January 2021 - April 2021</td>
               </tr>
               <tr>
-                <td>Faculty of Law</td>
+                <td>International Law</td>
                 <td>Samara University</td>
                 <td>September 2016 - July 2020</td>
               </tr>
