fix: change background of code section

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <section class="my-code-section">
           <h2 class="my-code-title">Example of My Code:</h2>
           <div class="my-code-content">
-            <pre><code class='typescript'>
+            <pre><code class='typescript' id='code'>
             public async getImgByProductID(idProduct: number): Promise&lt;string[]&gt; {
                 let asImage: string[] = null;
                 try {
