refactor: update to 0 errors and 0 warnings in validator

--- a/index.html
+++ b/index.html
@@ -27,16 +27,15 @@
         </div>
         <div class="contact-info header-box">
           <ul>
-            <h3>Contact info:</h3>
+           <li><p>Contact info:</p></li> 
             <li><p>email: ilyaprikaz@gmail.com</p></li>
             <li><p>telegram: @ilyaprikazchikov</p></li>
           </ul>
         </div>
       </div>
     </header>
+    <h1>⭐ CV ⭐</h1>
     <main>
-      <article>
-        <h1 class="article-name">⭐ CV ⭐</h1>
         <section class="about-me-section">
           <h2 class="about-me-title">About Me:</h2>
           <div class="about-me-content">
@@ -194,7 +193,6 @@
             </p>
           </div>
         </section>
-      </article>
     </main>
     <footer>
       <div class="footer-container">
