refactor: update about me and title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>CV | Ilya Prikazchikov</title>
+    <title>Ilya Prikazchikov | Full-Stack Developer</title>
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.9/styles/default.min.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.9/highlight.min.js"></script>
@@ -21,9 +21,9 @@
         </div>
         <div class="name-and-bio header-box">
           <h1 class="name">Ilya Prikazchikov</h1>
-          <p class="bio">
-            <em> The <strong>Rising Star</strong> of Web Development</em>
-          </p>
+          <h4 class="bio">
+            <em>Full-Stack Developer </em>
+          </h4>
         </div>
         <div class="contact-info header-box">
           <ul>
@@ -34,24 +34,15 @@
         </div>
       </div>
     </header>
-    <h1>⭐ CV ⭐</h1>
     <main>
         <section class="about-me-section">
           <h2 class="about-me-title">About Me:</h2>
           <div class="about-me-content">
-            <p>
-              I'm the <strong class="pro-decoration">pro</strong>grammer you're
-              looking for!
-            </p>
-            <p>
-              My goal is to become a <em>Gold Star of Web-Development</em> and
-              I'm really focused on it!
-            </p>
-            <p>
-              So if one day you come across a web-site or an app that works and
-              looks perfectly you can be sure it was made by
-              <strong>me!</strong>
-            </p>
+            <p>Able to work under multi-tasking conditions IT specialist with high analytical skills,</p>
+            <p> which allow to work effectively with large amounts of data, </p>
+            <p> quickly find solutions to complex problems and achieve impressive results. </p>
+              
+            <h3> Seeking to leverage my skills at your company.</h3>
           </div>
         </section>
         <hr />
@@ -218,7 +209,7 @@
               height="70"
             />
           </a>
-          <p>2021</p>
+          <p><time>2021</time></p>
         </div>
       </div>
     </footer>
