feat: add centered container

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
 
   <body>
+    <div class="centered-container">
     <header>
       <div class="header-container">
         <div class="profile-image header-box">
@@ -32,7 +33,7 @@
         </div>
         <div class="contact-info header-box">
           <ul>
-            <li><p>Contact info:</p></li>
+            <li>Contact info:</li>
             <li><p>email: ilyaprikaz@gmail.com</p></li>
             <li><p>telegram: @ilyaprikazchikov</p></li>
           </ul>
@@ -220,5 +221,6 @@
         </div>
       </div>
     </footer>
+  </div>
   </body>
 </html>
