--- a/index.html
+++ b/index.html
@@ -16,86 +16,86 @@
 
   <body>
     <div class="centered-container">
-    <header>
-      <div class="header-container">
-        <div class="profile-image header-box">
-          <img
-            class="profile-picture"
-            src="images/Ilya.png"
-            alt="Ilya's profile picture"
-          />
+      <header>
+        <div class="header-container">
+          <div class="profile-image header-box">
+            <img
+              class="profile-picture"
+              src="images/Ilya.png"
+              alt="Ilya's profile picture"
+            />
+          </div>
+          <div class="name-and-bio header-box">
+            <h1 class="name">Ilya Prikazchikov</h1>
+            <h4 class="bio">
+              <em>Full-Stack Developer </em>
+            </h4>
+          </div>
+          <div class="contact-info header-box">
+            <ul>
+              <li>Contact info:</li>
+              <li><p>email: ilyaprikaz@gmail.com</p></li>
+              <li><p>telegram: @ilyaprikazchikov</p></li>
+            </ul>
+          </div>
         </div>
-        <div class="name-and-bio header-box">
-          <h1 class="name">Ilya Prikazchikov</h1>
-          <h4 class="bio">
-            <em>Full-Stack Developer </em>
-          </h4>
-        </div>
-        <div class="contact-info header-box">
-          <ul>
-            <li>Contact info:</li>
-            <li><p>email: ilyaprikaz@gmail.com</p></li>
-            <li><p>telegram: @ilyaprikazchikov</p></li>
-          </ul>
-        </div>
-      </div>
-    </header>
-    <main>
-      <section class="about-me-section">
-        <h2 class="about-me-title">About Me:</h2>
-        <div class="about-me-content">
-          <p>
-            Able to work under multi-tasking conditions IT specialist with high
-            analytical skills,
-          </p>
-          <p>which allow to work effectively with large amounts of data,</p>
-          <p>
-            quickly find solutions to complex problems and achieve impressive
-            results.
-          </p>
+      </header>
+      <main>
+        <section class="about-me-section">
+          <h2 class="about-me-title">About Me:</h2>
+          <div class="about-me-content">
+            <p>
+              Able to work under multi-tasking conditions IT specialist with
+              high analytical skills,
+            </p>
+            <p>which allow to work effectively with large amounts of data,</p>
+            <p>
+              quickly find solutions to complex problems and achieve impressive
+              results.
+            </p>
 
-          <h3>Seeking to leverage my skills at your company.</h3>
-        </div>
-      </section>
-      <hr />
-      <section class="my-skills-section">
-        <h2 class="my-skills-title">My Skills:</h2>
+            <h3>Seeking to leverage my skills at your company.</h3>
+          </div>
+        </section>
+        <hr />
+        <section class="my-skills-section">
+          <h2 class="my-skills-title">My Skills:</h2>
 
-        <div class="my-skills-content">
-          <div class="skills-1">
-            <ul>
-              <li class="skill">JavaScript</li>
-              <li class="skill">TypeScript</li>
-              <li class="skill">React.js</li>
-              <li class="skill">Node.js</li>
-              <li class="skill">Express.js</li>
-            </ul>
+          <div class="my-skills-content">
+            <div class="skills-1">
+              <ul>
+                <li class="skill">JavaScript</li>
+                <li class="skill">TypeScript</li>
+                <li class="skill">React.js</li>
+                <li class="skill">Node.js</li>
+                <li class="skill">Express.js</li>
+              </ul>
+            </div>
+            <div class="skills-2">
+              <ul>
+                <li class="skill">SQL</li>
+                <li class="skill">MySQL</li>
+                <li class="skill">NoSQL</li>
+                <li class="skill">MongoDB</li>
+                <li class="skill">Knex.js</li>
+              </ul>
+            </div>
+            <div class="skills-3">
+              <ul>
+                <li class="skill">OOP</li>
+                <li class="skill">RESTful APIs</li>
+                <li class="skill">Git</li>
+                <li class="skill">HTML</li>
+                <li class="skill">CSS</li>
+              </ul>
+            </div>
           </div>
-          <div class="skills-2">
-            <ul>
-              <li class="skill">SQL</li>
-              <li class="skill">MySQL</li>
-              <li class="skill">NoSQL</li>
-              <li class="skill">MongoDB</li>
-              <li class="skill">Knex.js</li>
-            </ul>
-          </div>
-          <div class="skills-3">
-            <ul>
-              <li class="skill">OOP</li>
-              <li class="skill">RESTful APIs</li>
-              <li class="skill">Git</li>
-              <li class="skill">HTML</li>
-              <li class="skill">CSS</li>
-            </ul>
-          </div>
-        </div>
-      </section>
-      <hr />
-      <section class="my-code-section">
-        <h2 class="my-code-title">Example of My Code:</h2>
-        <div class="my-code-content">
-          <pre><code class='typescript' id='code'>
+        </section>
+        <hr />
+        <section class="my-code-section">
+          <h2 class="my-code-title">Example of My Code:</h2>
+          <div class="my-code-content">
+            <pre><code class='typescript' id='code'>
             public async getImgByProductID(idProduct: number): Promise&lt;string[]&gt; {
                 let asImage: string[] = null;
                 try {
@@ -113,114 +113,114 @@
                 }
                 return asImage;
             }</code></pre>
-        </div>
-      </section>
-      <hr />
-      <section class="work-experience-section">
-        <h2 class="work-experience-title">Work Experience:</h2>
-        <div class="work-experience-content div-with-table">
-          <table>
-            <tr>
-              <th>POSITION:</th>
-              <th>PLACE OF WORK:</th>
-              <th>PERIOD:</th>
-            </tr>
-            <tr>
-              <td>Back-End Developer</td>
-              <td>NeoSoft LLC, Russia</td>
-              <td>May 2021 - Current</td>
-            </tr>
-            <tr>
-              <td>Court Clerk</td>
-              <td>Industrial District Court of Samara, Russia</td>
-              <td>August 2020 - January 2021</td>
-            </tr>
-            <tr>
-              <td>Food & Beverage Associate</td>
-              <td>Kings Island, USA</td>
-              <td>May 2019 - September 2019</td>
-            </tr>
-          </table>
-        </div>
-      </section>
-      <hr />
-      <section class="education-section">
-        <h2 class="education-title">Education:</h2>
-        <div class="education-content div-with-table">
-          <table>
-            <tr>
-              <th>SPECIALIZATION:</th>
-              <th>PLACE OF STUDY:</th>
-              <th>PERIOD:</th>
-            </tr>
-            <tr>
-              <td>Front-End Web Development</td>
-              <td>Rolling Scopes School</td>
-              <td>July 2021 - Now</td>
-            </tr>
-            <tr>
-              <td>Full-Stack Web Development</td>
-              <td>JavaScript + Node.js + Vue.js in Real Projects, Udemy</td>
-              <td>March 2021 - June 2021</td>
-            </tr>
-            <tr>
-              <td>Full-Stack Web Development</td>
-              <td>The Complete 2021 Web-Development Bootcamp, Udemy</td>
-              <td>January 2021 - April 2021</td>
-            </tr>
-            <tr>
-              <td>International Law</td>
-              <td>Samara University</td>
-              <td>September 2016 - July 2020</td>
-            </tr>
-          </table>
-        </div>
-      </section>
-      <hr />
-      <section class="english-level-section">
-        <h2 class="english-level-title">English Level:</h2>
-        <div class="english-level-content">
-          <p>I think that my English level is <strong>B2+</strong>.</p>
-          <p>
-            I took part in "Work & Travel USA", so I lived and worked in the USA
-            from May to September 2019.
-          </p>
-          <p>
-            I got to know many international students and US citizens! I had a
-            lot of speaking practice and I hadn't got any problems with
-            understanding out there.
-          </p>
-        </div>
-      </section>
-    </main>
-    <footer>
-      <div class="footer-container">
-        <div class="footer-part footer-left">
-          <img
-            class="rs-school-logo"
-            src="images/rs_school_js.svg"
-            alt="rs-school-logo"
-            width="170"
-            height="70"
-          />
-          <a href="https://rs.school/js/">
-            <p>RS School Course</p>
-          </a>
-        </div>
-        <div class="footer-part footer-right">
-          <a href="https://github.com/Exy63">
+          </div>
+        </section>
+        <hr />
+        <section class="work-experience-section">
+          <h2 class="work-experience-title">Work Experience:</h2>
+          <div class="work-experience-content div-with-table">
+            <table>
+              <tr>
+                <th>POSITION:</th>
+                <th>PLACE OF WORK:</th>
+                <th>PERIOD:</th>
+              </tr>
+              <tr>
+                <td>Back-End Developer</td>
+                <td>NeoSoft LLC, Russia</td>
+                <td>May 2021 - Current</td>
+              </tr>
+              <tr>
+                <td>Court Clerk</td>
+                <td>Industrial District Court of Samara, Russia</td>
+                <td>August 2020 - January 2021</td>
+              </tr>
+              <tr>
+                <td>Food & Beverage Associate</td>
+                <td>Kings Island, USA</td>
+                <td>May 2019 - September 2019</td>
+              </tr>
+            </table>
+          </div>
+        </section>
+        <hr />
+        <section class="education-section">
+          <h2 class="education-title">Education:</h2>
+          <div class="education-content div-with-table">
+            <table>
+              <tr>
+                <th>SPECIALIZATION:</th>
+                <th>PLACE OF STUDY:</th>
+                <th>PERIOD:</th>
+              </tr>
+              <tr>
+                <td>Front-End Web Development</td>
+                <td>The Rolling Scopes School</td>
+                <td>July 2021 - Now</td>
+              </tr>
+              <tr>
+                <td>Full-Stack Web Development</td>
+                <td>JavaScript + Node.js + Vue.js in Real Projects, Udemy</td>
+                <td>March 2021 - June 2021</td>
+              </tr>
+              <tr>
+                <td>Full-Stack Web Development</td>
+                <td>The Complete 2021 Web-Development Bootcamp, Udemy</td>
+                <td>January 2021 - April 2021</td>
+              </tr>
+              <tr>
+                <td>International Law</td>
+                <td>Samara University</td>
+                <td>September 2016 - July 2020</td>
+              </tr>
+            </table>
+          </div>
+        </section>
+        <hr />
+        <section class="english-level-section">
+          <h2 class="english-level-title">English Level:</h2>
+          <div class="english-level-content">
+            <p>I think that my English level is <strong>B2+</strong>.</p>
+            <p>
+              I took part in "Work & Travel USA", so I lived and worked in the
+              USA from May to September 2019.
+            </p>
+            <p>
+              I got to know many international students and US citizens! I had a
+              lot of speaking practice and I hadn't got any problems with
+              understanding out there.
+            </p>
+          </div>
+        </section>
+      </main>
+      <footer>
+        <div class="footer-container">
+          <div class="footer-part footer-left">
             <img
-              class="github-logo"
-              src="images/github-logo.png"
-              alt="me on github"
-              width="190"
+              class="rs-school-logo"
+              src="images/rs_school_js.svg"
+              alt="rs-school-logo"
+              width="170"
               height="70"
             />
-          </a>
-          <p><time>2021</time></p>
+            <a href="https://rs.school/js/">
+              <p>RS School Course</p>
+            </a>
+          </div>
+          <div class="footer-part footer-right">
+            <a href="https://github.com/Exy63">
+              <img
+                class="github-logo"
+                src="images/github-logo.png"
+                alt="me on github"
+                width="190"
+                height="70"
+              />
+            </a>
+            <p><time>2021</time></p>
+          </div>
         </div>
-      </div>
-    </footer>
-  </div>
+      </footer>
+    </div>
   </body>
 </html>
