feat: recreate footer

--- a/index.html
+++ b/index.html
@@ -195,19 +195,19 @@
       </main>
       <footer>
         <div class="footer-container">
-          <div class="footer-part footer-left">
-            <img
-              class="rs-school-logo"
-              src="images/rs_school_js.svg"
-              alt="rs-school-logo"
-              width="170"
-              height="70"
-            />
+          <div class="footer-block">
             <a href="https://rs.school/js/">
-              <p>RS School Course</p>
+              <img
+                class="rs-school-logo"
+                src="images/rs_school_js.svg"
+                alt="rs-school-logo"
+                width="170"
+                height="70"
+              />
             </a>
           </div>
-          <div class="footer-part footer-right">
+          <p class="year">© <time>2021</time></p>
+          <div class="footer-block">
             <a href="https://github.com/Exy63">
               <img
                 class="github-logo"
@@ -217,7 +217,6 @@
                 height="70"
               />
             </a>
-            <p><time>2021</time></p>
           </div>
         </div>
       </footer>
