feat: create project cards

--- a/index.html
+++ b/index.html
@@ -116,6 +116,18 @@
           </div>
         </section>
         <hr />
+        <section class="my-projects-section">
+          <h2 class="my-projects-title">My projects:</h2>
+          <div class="projects-card-collection">
+            <div class="project-card"><img class='project-image' src="/images/projects/secrets.png" alt=""></div>
+            <div class="project-card"><img class='project-image'  src="images/projects/whack-a-mole.png" alt=""></div>
+            <div class="project-card"><img class='project-image'  src="/images/projects/tindog.png" alt=""></div>
+            <div class="project-card"> <img class='project-image'  src="/images/projects/simongame.png" alt=""></div>
+            <div class="project-card"><img class='project-image'  src="images/projects/todo.png" alt=""></div>
+            <div class="project-card"><img class='project-image'  src="/images/projects/drumkit.png" alt=""></div>
+          </div>
+        </section>
+        <hr />
         <section class="work-experience-section">
           <h2 class="work-experience-title">Work Experience:</h2>
           <div class="work-experience-content div-with-table">
