feat: create my projects section

--- a/index.html
+++ b/index.html
@@ -119,12 +119,74 @@
         <section class="my-projects-section">
           <h2 class="my-projects-title">My projects:</h2>
           <div class="projects-card-collection">
-            <div class="project-card"><img class='project-image' src="/images/projects/secrets.png" alt=""></div>
-            <div class="project-card"><img class='project-image'  src="images/projects/whack-a-mole.png" alt=""></div>
-            <div class="project-card"><img class='project-image'  src="/images/projects/tindog.png" alt=""></div>
-            <div class="project-card"> <img class='project-image'  src="/images/projects/simongame.png" alt=""></div>
-            <div class="project-card"><img class='project-image'  src="images/projects/todo.png" alt=""></div>
-            <div class="project-card"><img class='project-image'  src="/images/projects/drumkit.png" alt=""></div>
+            <div class="project-card">
+              <a href="https://peaceful-caverns-23939.herokuapp.com/" target="_blank" rel="noopener noreferrer"
+                ><img
+                  class="project-image"
+                  src="/images/projects/secrets.png"
+                  alt=""
+              /></a>
+              <h5>Secrets</h5>
+              <h6>Don`t keep your secrets, share `em anonymously!</h6>
+              <h6 class='stack'>Node.js, Express.js, EJS, HTML, CSS, Bootstrap, Git, Mongoose, MongoDB Atlas Database, Heroku, .env, Hashing + Salting, Passport.js, Google, Facebook, Cookies</h6>
+            </div>
+            <div class="project-card">
+              <a href="https://exy63.github.io/whack-a-mole/" target="_blank" rel="noopener noreferrer"
+                ><img
+                  class="project-image"
+                  src="images/projects/whack-a-mole.png"
+                  alt=""
+              /></a>
+              <h5>Whack-a-Mole</h5>
+              <h6>Deal with the moles!</h6>
+              <h6 class='stack'>HTML, CSS, JavaScript, Git</h6>
+            </div>
+            <div class="project-card">
+              <a href="https://exy63.github.io/TinDog/" target="_blank" rel="noopener noreferrer"
+                ><img
+                  class="project-image"
+                  src="/images/projects/tindog.png"
+                  alt=""
+              /></a>
+              <h5>TinDog</h5>
+              <h6>Meet new and interesting dogs nearby!</h6>
+              <h6 class='stack'>HTML, CSS, Bootstrap, JavaScript, Git</h6>
+
+            </div>
+            <div class="project-card">
+              <a href="https://exy63.github.io/TheSimonGame/" target="_blank" rel="noopener noreferrer">
+                <img
+                  class="project-image"
+                  src="/images/projects/simongame.png"
+                  alt=""
+              /></a>
+              <h5>Simon Game</h5>
+              <h6>Boost your memory!</h6>
+              <h6 class='stack'>HTML, CSS, JavaScript, Git</h6>
+            </div>
+            <div class="project-card">
+              <a href="https://quiet-springs-09055.herokuapp.com/" target="_blank" rel="noopener noreferrer"
+                ><img
+                  class="project-image"
+                  src="images/projects/todo.png"
+                  alt=""
+              /></a>
+              <h5>To-Do List</h5>
+              <h6>All your plans are here!</h6>
+              <h6 class='stack'>Node.js, Express.js, EJS, HTML, CSS, Git, Mongoose, MongoDB Atlas Database, Heroku.</h6>
+            </div>
+            <div class="project-card">
+              <a href="https://exy63.github.io/DrumKit/" target="_blank" rel="noopener noreferrer"
+                ><img
+                  class="project-image"
+                  src="/images/projects/drumkit.png"
+                  alt=""
+              /></a>
+              <h5>DrumKit</h5>
+              <h6>Be the best drummer!</h6>
+              <h6 class='stack'>HTML, CSS, JavaScript, Git</h6>
+
+            </div>
           </div>
         </section>
         <hr />
