refactor: refactor education section

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
               <tr>
                 <td>Front-End Web Development</td>
                 <td>The Rolling Scopes School</td>
-                <td>July 2021 - Now</td>
+                <td>July 2021 - Current</td>
               </tr>
               <tr>
                 <td>Full-Stack Web Development</td>
