feat: create blamk for footer links

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
       <footer>
         <div class="footer-container">
           <div class="footer-block">
-            <a href="https://rs.school/js/">
+            <a href="https://rs.school/js/" target="_blank" rel="noopener noreferrer">
               <img
                 class="rs-school-logo"
                 src="images/rs_school_js.svg"
@@ -282,7 +282,7 @@
           </div>
           <p class="year">© <time>2021</time></p>
           <div class="footer-block">
-            <a href="https://github.com/Exy63">
+            <a href="https://github.com/Exy63" target="_blank" rel="noopener noreferrer">
               <img
                 class="github-logo"
                 src="images/github-logo.png"
