--- a/index.html
+++ b/index.html
@@ -301,6 +301,13 @@
             </p>
           </div>
         </section>
+        <hr id="video" />
+        <section class="video-section">
+          <h2 class="video-title">Video:</h2>
+          <div class="video-content">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/nGio7PSMsz8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </section>
       </main>
       <footer>
         <div class="footer-container">
