--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
       rel="stylesheet"
       href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.9/styles/default.min.css"
     />
+    <script
+      src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.9/highlight.min.js"
+      async
+    ></script>
+    <script>
+      hljs.initHighlightingOnLoad();
+    </script>
+    <script src="index.js" async></script>
   </head>
 
   <body>
@@ -106,7 +114,7 @@
         <section class="my-code-section">
           <h2 class="my-code-title">Example of My Code:</h2>
           <div class="my-code-content">
-            <pre><code class='typescript' id='code'>
+            <pre><code class='typescript'>
             public async getImgByProductID(idProduct: number): Promise&lt;string[]&gt; {
                 let asImage: string[] = null;
                 try {
@@ -305,7 +313,14 @@
         <section class="video-section">
           <h2 class="video-title">Video:</h2>
           <div class="video-content">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/nGio7PSMsz8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/nGio7PSMsz8"
+              title="YouTube video player"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
           </div>
         </section>
       </main>
@@ -347,8 +362,3 @@
     </div>
   </body>
 </html>
-<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.9/highlight.min.js"></script>
-<script>
-  hljs.initHighlightingOnLoad();
-</script>
-<script src="index.js"></script>
