fix: kill image bugs

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 rel="noopener noreferrer"
                 ><img
                   class="project-image"
-                  src="/images/projects/secrets.png"
+                  src="images/projects/secrets.png"
                   alt=""
               /></a>
               <h5>Secrets</h5>
@@ -177,7 +177,7 @@
                 rel="noopener noreferrer"
                 ><img
                   class="project-image"
-                  src="/images/projects/tindog.png"
+                  src="images/projects/tindog.png"
                   alt=""
               /></a>
               <h5>TinDog</h5>
@@ -192,7 +192,7 @@
               >
                 <img
                   class="project-image"
-                  src="/images/projects/simongame.png"
+                  src="images/projects/simongame.png"
                   alt=""
               /></a>
               <h5>Simon Game</h5>
@@ -223,7 +223,7 @@
                 rel="noopener noreferrer"
                 ><img
                   class="project-image"
-                  src="/images/projects/drumkit.png"
+                  src="images/projects/drumkit.png"
                   alt=""
               /></a>
               <h5>DrumKit</h5>
